Partly fixed text overflowing issue in view page

--- a/app/frontend/static/stylying.css
+++ b/app/frontend/static/stylying.css
@@ -147,13 +147,14 @@ main {
 .show-def {
     margin-bottom: 3%;
     background: #B2EBF2;
-    width: 70%;
+    width: 99%;
     height: 50px;
     font-size: xx-large;
     padding-top: 12px;
     padding-left: 1%;
     border: 1px solid #0097A7;
     border-radius: 6px;
+    overflow: hidden;
 }
 
 .def-text {
